correction from last feedback

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
       <div class="container_left">
         <div class="inner_box">
           <h1 data-testid="slackUserName">Web3gurl</h1>
-          <p data-testid="myTrack">Track: FrontEnd Development</p>
-          <p data-testid="currentDayOfTheWeek">
+          <p data-testid="myTrack">FrontEnd Development</p>
+          <p>
             <i class="fa-solid fa-calendar-days"></i> Day of the week:
-            <span></span>
+            <span data-testid="currentDayOfTheWeek"></span>
           </p>
-          <p data-testid="currentUTCTime">
+          <p>
             <i class="fa-solid fa-clock"></i>Time (UTC):
-            <span></span>
+            <span data-testid="currentUTCTime"></span>
           </p>
         </div>
       </div>
-      <div class="container_right ">
+      <div class="container_right">
         <img
-          src="./web3gurl.jpg"
+          src="./images/web3gurl.jpg"
           alt="web3gurl"
           data-testid="slackDisplayImage"
         />
