--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="container">
       <div class="container_left">
         <div class="inner_box">
-          <h1 data-testid="slackUserName">Web3gurl</h1>
+          <h1 data-testid="slackUserName">web3gurl</h1>
           <p data-testid="myTrack">FrontEnd Development</p>
           <p>
             <i class="fa-solid fa-calendar-days"></i> Day of the week:
