--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         View webpage sourcecode on
         <a
           href="https://github.com/ogechi499/Stage1-HNGX-task"
-          data-testid="“githubURL”"
+          data-testid="githubURL"
           >GITHUB</a
         >
       </p>
